--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                     </div>
                     <div class="col-md-8">
                         <ul class="list">
-                            <li><a href="#"><i class="fab fa-twitter-square"></a></i></li>
-                            <li><a href="#"><i class="fab fa-facebook"></a></i></li>
-                            <li><a href="#"><i class="fab fa-pinterest"></a></i></li>
+                            <li><a href="#"><i class="fab fa-twitter"></a></i></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></a></i></li>
+                            <li><a href="#"><i class="fab fa-pinterest-p"></a></i></li>
                             <li><a href="#"><i class="fab fa-google-plus"></a></i></li>
                         </ul>
                     </div>
