--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <body>
         <header class="splash">
             <div class="splash-inner">
-                <img src="https://i.postimg.cc/15SXxYnP/black-and-white-cases-cigarette-238230.jpg" alt="image">
                 <h1 class="page-title">Welcome to our studio!</h1>
                 <h2 class="page-subtitle">It`s nice to meet you</h2>
                 <a href="#" class="btn btn-one">tell me more</a>
@@ -21,8 +20,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
-                            <ul class="golden">
-                                <li><a href="#">Golden</a></li>
+                            <ul>
+                                <li class="golden"><a href="#">Golden</a></li>
                             </ul>
                         </div>
                         <div class="col-md-8">
